@@ -1,0 +1,12 @@
+#IMAGE LAYER FOR RES src//\gfx\hud\hwadown.res
+#int16 z
+0
+#int16 subz
+0
+#Byte nooff
+0
+#int16 id
+-1
+#Coord o
+0
+0
