@@ -1,0 +1,3 @@
+#General info for res src//\gfx\hud\hwaup.res
+#int16 ver
+1
