@@ -30,7 +30,7 @@ import java.util.*;
 import java.awt.event.KeyEvent;
 
 public abstract class ConsoleHost extends Widget {
-    public static Text.Foundry cmdfoundry = new Text.Foundry(new java.awt.Font("Monospaced", java.awt.Font.PLAIN, 12), new java.awt.Color(245, 222, 179));
+    public static Text.Foundry cmdfoundry = new Text.Foundry(new java.awt.Font("SansSerif", java.awt.Font.BOLD, 14), new java.awt.Color(0, 192, 192));
     LineEdit cmdline = null;
     private Text.Line cmdtext = null;
     private String cmdtextf = null;
